Add image page changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">CameR</string>
-    <string name="update_page">ADD IMAGE</string>
+    <string name="update_page">Add Image</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_image_full">Image Info</string>
 </resources>
